--- a/demo/index.html
+++ b/demo/index.html
@@ -14,8 +14,8 @@
   <div id="items"></div>
   </br>
   <x-pager itemCount="18">
-    <button class="pager-prev">Prev</button>
-    <button class="pager-next">Next</button>
+    <button class="prev" disabled>Prev</button>
+    <button class="next">Next</button>
   </x-pager>
 </body>
 <script>
