Added gitignore and removed unnecesary files

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Pager Demo - X-Tag</title>
-  <link rel="stylesheet" type="text/css" href="x-tag-components.css" />
-  <script type="text/javascript" src="x-tag-components.js"></script>
+  <script type="text/javascript" src="../bower_components/x-tag-core/dist/x-tag-core.min.js"></script>
   <script type="text/javascript" src="../src/x-pager.js"></script>
 </head>
 
@@ -13,7 +12,7 @@
   <h1>Pager demo</h1>
   <div id="items"></div>
   </br>
-  <x-pager itemCount="18">
+  <x-pager item-count="18">
     <button class="prev" disabled>Prev</button>
     <button class="next">Next</button>
   </x-pager>
