--- a/test/index.html
+++ b/test/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap Extensions Unit Tests</title>
-  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
+  <title>X-Pager Unit Tests</title>
+  <link rel="shortcut icon" type="image/png" href="../bower_components/jasmine-core/images/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="../bower_components/jasmine-core/lib/jasmine-core/jasmine.css">
+  <script type="text/javascript" src="../bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+  <script type="text/javascript" src="../bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+  <script type="text/javascript" src="../bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
+  <script type="text/javascript" src="../bower_components/x-tag-core/dist/x-tag-core.min.js"></script>
+  <script src="../src/x-pager.js"></script>
+  <script src="spec/x-pager.js"></script>
+  <style>
+    #testbox {
+      display: none;
+    }
+  </style>
 </head>
+
 <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/velocity/velocity.min.js"></script>
-  <script src="../bower_components/velocity/velocity.ui.min.js"></script>
-  <script src="../bower_components/qunit/qunit/qunit.js"></script>
-  <script src="../src/animations.js"></script>
-  <script src="../src/pager.js"></script>
-  <script src="../src/wizard.js"></script>
-  <script src="unit/pager.test.js"></script>
-  <script src="unit/wizard.test.js"></script> 
+  <div id="testbox"></div>
 </body>
+
 </html>
